--- a/projects/project3.html
+++ b/projects/project3.html
@@ -3,11 +3,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Matt Castillo Engineering Portfolio</title>
+  <title>Home | Matt Castillo Engineering Portfolio</title>
   <meta name="description" content="Engineering portfolio of Matt Castillo.">
   <meta name="author" content="Matt Castillo">
-
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
