--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Work</a>
-        <a href="#">Contact</a>
+        <a href="#">Contact</a
       </div>
     </div>
   </header>
@@ -36,19 +36,19 @@
         <h2>Recent Projects</h2>
         <div class="grid">
           <a href="/" class="project">
-            <img class="icon" src="/assets/icons/fi-forecast.png" />
+            <img class="icon" src="assets/icons/fi-forecast.png" />
             <h4>FI Forecast</h4>
             <h6>Feb-Mar 2021</h6>
             <p>Helping everyday investors find out when they may reach financial independence.</p>
           </a>
           <a href="/" class="project">
-            <img class="icon" src="/assets/icons/swatch-ui.png" />
+            <img class="icon" src="assets/icons/swatch-ui.png" />
             <h4>swatch-ui</h4>
             <h6>Jan-Feb 2021</h6>
             <p>Rapidly experiment with styling to generate quick swatches of your UI's look-and-feel.</p>
           </a>
           <a href="/" class="project">
-            <img class="icon" src="/assets/icons/bon-api-etit.png" />
+            <img class="icon" src="assets/icons/bon-api-etit.png" />
             <h4>Bon API-etit</h4>
             <h6>Dec 2020</h6>
             <p>Search for recipes based on keyword and dietary restrictions, then save them as PDFs!</p>
