--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
       <section id="projects">
         <h2>Recent Projects</h2>
         <div class="grid">
-          <a href="/" class="project">
+          <a href="#" class="project">
             <img class="icon" src="assets/icons/fi-forecast.png" />
             <h4>FI Forecast</h4>
             <h6>Feb-Mar 2021</h6>
             <p>Helping everyday investors find out when they may reach financial independence.</p>
           </a>
-          <a href="/" class="project">
+          <a href="#" class="project">
             <img class="icon" src="assets/icons/swatch-ui.png" />
             <h4>swatch-ui</h4>
             <h6>Jan-Feb 2021</h6>
             <p>Rapidly experiment with styling to generate quick swatches of your UI's look-and-feel.</p>
           </a>
-          <a href="/" class="project">
+          <a href="#" class="project">
             <img class="icon" src="assets/icons/bon-api-etit.png" />
             <h4>Bon API-etit</h4>
             <h6>Dec 2020</h6>
