No 'projects' and about page
- About page
- Removed project pages
- Set up footer on every page
- Added contact page

--- a/contact.html
+++ b/contact.html
@@ -32,21 +32,7 @@
   <main>
     <div class="container">
       <section id="hero">
-        <h1>About</h1>
-      </section>
-      <section class="grid two">
-        <div class="bio">
-          <h3>A little about me</h3>
-          <p>I live with my wife in the Bay Area, by way of Chicago and central Texas. We're always thinking about our next move.</p>
-          <h3>Background</h3>
-          <p>I've been working as a product designer for over 8 years and I've always had a passion for programming. I've enjoyed collaborating with engineering teams over the years to solve problems and build products.</p>
-          <h3>In  my spare time...</h3>
-          <p>I enjoy beer gardens, breakfast tacos, movie trivia, radiohead, science fiction, karaoke.</p>
-        </div>
-        <div class="portrait">
-          <img src="../assets/portrait.jpg" alt="Portrait of Matt Castillo"/>
-          <h5 class="caption">Photo taken by Emily Hom-Nici</h5>
-        </div>
+        <h1>Contact</h1>
       </section>
     </div>
   </main>
@@ -56,9 +42,9 @@
       <a class="title" href="../index.html">Matt Castillo</a>
       <div class="right">
         <a href="../index.html">Home</a>
-        <a href="#">About</a>
+        <a href="../about.html">About</a>
         <a href="../work.html">Work</a>
-        <a href="../contact.html">Contact</a>
+        <a href="#">Contact</a>
       </div>
       <p>© <script>document.write(new Date().getFullYear())</script></p>
     </div>
