--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="../assets/favicons/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Home | Matt Castillo Engineering Portfolio</title>
   <meta name="description" content="Engineering portfolio of Matt Castillo.">
   <meta name="author" content="Matt Castillo">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/styles.css">
+
+  <script src="https://kit.fontawesome.com/8c8bd573cc.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
   <header>
     <div class="container"> 
-      <a class="title" href="#">Matt Castillo</a>
+      <a class="title" href="../index.html">Matt Castillo</a>
       <div class="right">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Work</a>
-        <a href="#">Contact</a
+        <a href="../index.html">Home</a>
+        <a href="../about.html">About</a>
+        <a href="../work.html">Work</a>
+        <a href="../contact.html">Contact</a>
       </div>
     </div>
   </header>
@@ -34,25 +36,31 @@
       </section>
       <section id="projects">
         <h2>Recent Projects</h2>
-        <div class="grid">
-          <a href="#" class="project">
-            <img class="icon" src="assets/icons/fi-forecast.png" />
+        <div class="grid three">
+          <div class="project">
+            <img class="icon" src="../assets/icons/fi-forecast.png" />
             <h4>FI Forecast</h4>
             <h6>Feb-Mar 2021</h6>
             <p>Helping everyday investors find out when they may reach financial independence.</p>
-          </a>
-          <a href="#" class="project">
-            <img class="icon" src="assets/icons/swatch-ui.png" />
+            <a href="https://fi-forecast.vercel.app/" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
+            <a href="https://github.com/interactivematt/fi-forecast" class="btn secondary" target="_blank">View <i class="fab fa-github"></i> Repo</a>
+          </div>
+          <div class="project">
+            <img class="icon" src="../assets/icons/swatch-ui.png" />
             <h4>swatch-ui</h4>
             <h6>Jan-Feb 2021</h6>
             <p>Rapidly experiment with styling to generate quick swatches of your UI's look-and-feel.</p>
-          </a>
-          <a href="#" class="project">
-            <img class="icon" src="assets/icons/bon-api-etit.png" />
+            <a href="https://swatch-ui.vercel.app/" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
+            <a href="https://github.com/interactivematt/swatch-ui" class="btn secondary" target="_blank">View <i class="fab fa-github"></i> Repo</a>
+          </div>
+          <div class="project">
+            <img class="icon" src="../assets/icons/bon-api-etit.png" />
             <h4>Bon API-etit</h4>
             <h6>Dec 2020</h6>
             <p>Search for recipes based on keyword and dietary restrictions, then save them as PDFs!</p>
-          </a>
+            <a href="https://interactivematt.github.io/bon-api-etit" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
+            <a href="https://github.com/interactivematt/bon-api-etit" class="btn secondary" target="_blank">View <i class="fab fa-github"></i> Repo</a>
+          </div>
         </div>
       </section>
     </div>
@@ -62,9 +70,9 @@
       <a class="title" href="#">Matt Castillo</a>
       <div class="right">
         <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Work</a>
-        <a href="#">Contact</a>
+        <a href="../about.html">About</a>
+        <a href="../work.html">Work</a>
+        <a href="../contact.html">Contact</a>
       </div>
       <p>© <script>document.write(new Date().getFullYear())</script></p>
     </div>
