--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="../assets/favicons/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>About | Matt Castillo Engineering Portfolio</title>
+  <title>Work | Matt Castillo Engineering Portfolio</title>
   <meta name="description" content="Engineering portfolio of Matt Castillo.">
   <meta name="author" content="Matt Castillo">
   <link rel="stylesheet" href="../css/reset.css">
@@ -32,21 +32,7 @@
   <main>
     <div class="container">
       <section id="hero">
-        <h1>About</h1>
-      </section>
-      <section class="grid two">
-        <div class="bio">
-          <h3>A little about me</h3>
-          <p>I live with my wife in the Bay Area, by way of Chicago and central Texas. We're always thinking about our next move.</p>
-          <h3>Background</h3>
-          <p>I've been working as a product designer for over 8 years and I've always had a passion for programming. I've enjoyed collaborating with engineering teams over the years to solve problems and build products.</p>
-          <h3>In  my spare time...</h3>
-          <p>I enjoy beer gardens, breakfast tacos, movie trivia, radiohead, science fiction, karaoke.</p>
-        </div>
-        <div class="portrait">
-          <img src="../assets/portrait.jpg" alt="Portrait of Matt Castillo"/>
-          <h5 class="caption">Photo taken by Emily Hom-Nici</h5>
-        </div>
+        <h1>Work</h1>
       </section>
     </div>
   </main>
@@ -56,13 +42,14 @@
       <a class="title" href="../index.html">Matt Castillo</a>
       <div class="right">
         <a href="../index.html">Home</a>
-        <a href="#">About</a>
-        <a href="../work.html">Work</a>
+        <a href="../about.html">About</a>
+        <a href="#">Work</a>
         <a href="../contact.html">Contact</a>
       </div>
       <p>© <script>document.write(new Date().getFullYear())</script></p>
     </div>
   </footer>
+
 
   <script src="js/scripts.js"></script>
 </body>
