--- a/index.html
+++ b/index.html
@@ -1,83 +1,215 @@
-<!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <link rel="icon" href="../assets/favicons/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <title>Home | Matt Castillo Engineering Portfolio</title>
-  <meta name="description" content="Engineering portfolio of Matt Castillo.">
-  <meta name="author" content="Matt Castillo">
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/styles.css">
-
-  <script src="https://kit.fontawesome.com/8c8bd573cc.js" crossorigin="anonymous"></script>
-
-</head>
-
-<body>
-  <header>
-    <div class="container"> 
-      <a class="title" href="../index.html">Matt Castillo</a>
-      <div class="right">
-        <a href="../index.html">Home</a>
-        <a href="../about.html">About</a>
-        <a href="../work.html">Work</a>
-        <a href="../contact.html">Contact</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Home | Matt Castillo Engineering Portfolio</title>
+    <meta name="description" content="Engineering portfolio of Matt Castillo.">
+    <meta name="author" content="Matt Castillo">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8c8bd573cc.js" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../js/jquery-1.10.1.min.js"><\/script>')</script>
+    <script src="../js/medium-zoom.min.js"></script>
+    <script src="../js/main.js"></script>
+  </head>
+  <body>
+    <header> <!-- Here's my header. -->
+      <div class="container">
+        <img src="../assets/profile.jpg" alt="Photo of Matt">
+        <h1><a class="title" href="../index.html">Matt Castillo</a></h1>
+        <h3>Designer / Developer</h3>
+        <nav>
+          <a href="#intro">Intro</a>
+          <a href="#about">About</a>
+          <a href="#projects">Projects</a>
+          <a href="#contact">Contact</a>
+        </nav>
       </div>
-    </div>
-  </header>
-  
-  <main>
-    <div class="container">
-      <section id="hero">
-        <h1>Matt Castillo is a designer and developer.</h1>
-      </section>
-      <section id="projects">
-        <h2>Recent Projects</h2>
-        <div class="grid three">
-          <div class="project">
-            <img class="icon" src="../assets/icons/fi-forecast.png" />
-            <h4>FI Forecast</h4>
-            <h6>Feb-Mar 2021</h6>
-            <p>Helping everyday investors find out when they may reach financial independence.</p>
-            <a href="https://fi-forecast.vercel.app/" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
-            <a href="https://github.com/interactivematt/fi-forecast" class="btn secondary" target="_blank">View <i class="fab fa-github"></i> Repo</a>
-          </div>
-          <div class="project">
-            <img class="icon" src="../assets/icons/swatch-ui.png" />
-            <h4>swatch-ui</h4>
-            <h6>Jan-Feb 2021</h6>
-            <p>Rapidly experiment with styling to generate quick swatches of your UI's look-and-feel.</p>
-            <a href="https://swatch-ui.vercel.app/" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
-            <a href="https://github.com/interactivematt/swatch-ui" class="btn secondary" target="_blank">View <i class="fab fa-github"></i> Repo</a>
-          </div>
-          <div class="project">
-            <img class="icon" src="../assets/icons/bon-api-etit.png" />
-            <h4>Bon API-etit</h4>
-            <h6>Dec 2020</h6>
-            <p>Search for recipes based on keyword and dietary restrictions, then save them as PDFs!</p>
-            <a href="https://interactivematt.github.io/bon-api-etit" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
-            <a href="https://github.com/interactivematt/bon-api-etit" class="btn secondary" target="_blank">View <i class="fab fa-github"></i> Repo</a>
-          </div>
+    </header>
+    <div class="content">
+      <main>
+        <div class="container">
+          <article id="intro">
+            <!-- An Intro section that contains the following information:
+            ✅ Who you are
+            ✅ Where you are
+            ✅ What you do and what makes you special
+            -->
+            <h2>Intro</h2>
+            <section>
+            <h3>Nice to meet you</h3>
+              <div class="group">
+                <div class="item">
+                  <p>Hi, I'm Matt. I'm a designer and developer based in Oakland, CA. Originally from El Paso, I've since called Austin, Chicago, and San Francisco home. With my experience as a designer and my skills in engineering, I can build beautiful, intuitive interfaces using clean code.</p>
+                </div>
+
+              </div>
+            </section>
+          </article>
+          <article id="about">
+            <!-- An About Me section that contains the following information:
+            ✅ demonstrate your passion for the web
+            ✅ demonstrate desire to work on a team with great programmers
+            ✅ show your personality outside of coding
+            ✅ List of services you can (or want to) provide a client.
+            -->
+            <h2>About</h2>
+            <section>
+            <h3>Get to know me</h3>
+            <div class="group">
+              <div class="item">
+                <p>I've been a product designer for 8 years and I've always had a passion for programming. I've also enjoyed collaborating with engineering teams over the years to solve problems and build UI's. In  my spare time, I like baking, video games, and home automation. My personality type is INTP 😈.</p>
+              </div>
+              <div class="item">
+                <h4>Services</h4>
+                <ul>
+                  <li>Product Design</li>
+                  <li>Front-end Development</li>
+                  <li>UX Research</li>
+                  <li>Dad Jokes</li>
+                </ul>
+              </div>
+            </div>
+            </section>
+          </article>
+          <article id="projects">
+            <!-- Projects section
+                ✅ Project Title
+                ✅ Project Description
+                ✅ link to Project
+            -->
+            <h2>Projects</h2>
+            <h3>Here's what I've been working on recently</h3>
+            <section>
+              <div class="project">
+                <figure class="description">
+                  <img class="icon" src="../assets/icons/fi-forecast.png" />
+                  <div>
+                    <h4>FI Forecast</h4>
+                    <h6>Feb-Mar 2021</h6>
+                  </div>
+                </figure>
+                <p>Many personal finance tools aren't designed to be easy. This forecasting tool helps everyday investors discover when they can reach financial independence.</p>
+                <div class="labels">
+                  <span>Built with: </span>
+                  <span class="label">React</span>
+                  <span class="label">Node.js</span>
+                  <span class="label">PostgreSQL</span>
+                  <span class="label">RESTful APIs</span>
+                  <span class="label">HTML</span>
+                  <span class="label">CSS</span>
+                </div>
+                <div class="slideshow">
+                  <img id="zoom-default" src="../assets/projects/1/1.png" data-zoom-src="../assets/projects/1/1.png" alt="Project image of fi-forecast app."/>
+                  <img src="../assets/projects/1/2.png" alt="Project image of fi-forecast app."/>
+                  <img src="../assets/projects/1/3.png" alt="Project image of fi-forecast app."/>
+                </div>
+                <div class="buttons two">
+                  <a href="https://fi-forecast.vercel.app/" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
+                  <a href="https://github.com/interactivematt/fi-forecast" class="btn secondary" target="_blank">View Repo <i class="fab fa-github"></i></a>
+                </div>
+              </div>
+              <div class="project">
+                <figure class="description">
+                  <img class="icon" src="../assets/icons/swatch-ui.png" />
+                  <div>
+                    <h4>swatch-ui</h4>
+                    <h6>Jan-Feb 2021</h6>
+                  </div>
+                </figure>
+                <p>Finding the right combination of color and typography for projects can sometimes take a while. This tool helps you rapidly experiment with fonts and color palettes to generate a swatch of UI to use in your projects.</p>
+                <div class="labels">
+                  <span>Built with: </span>
+                  <span class="label">React</span>
+                  <span class="label">Node.js</span>
+                  <span class="label">PostgreSQL</span>
+                  <span class="label">RESTful APIs</span>
+                  <span class="label">HTML</span>
+                  <span class="label">CSS</span>
+                </div>
+                <div class="slideshow">
+                  <img src="../assets/projects/2/1.png" alt="Project image of swatch-ui app."/>
+                  <img src="../assets/projects/2/2.png" alt="Project image of swatch-ui app."/>
+                  <img src="../assets/projects/2/3.png" alt="Project image of swatch-ui app."/>
+                </div>
+                <div class="buttons grid two">
+                  <a href="https://swatch-ui.vercel.app/" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
+                  <a href="https://github.com/interactivematt/swatch-ui" class="btn secondary" target="_blank">View Repo <i class="fab fa-github"></i></a>
+                </div>
+              </div>
+              <div class="project">
+                <figure class="description">
+                  <img class="icon" src="../assets/icons/bon-api-etit.png" />
+                  <div>
+                    <h4>Bon API-etit</h4>
+                    <h6>Dec 2020</h6>
+                  </div>
+                </figure>
+                <p>As an avid recipe collector, I built a search tool to quickly find recipes based on keyword and dietary restrictions, and then save them as PDFs.</p>
+                <div class="labels">
+                  <span>Built with: </span>
+                  <span class="label">RESTful APIs</span>
+                  <span class="label">HTML</span>
+                  <span class="label">CSS</span>
+                </div>
+                <div class="slideshow">
+                  <img src="../assets/projects/3/1.png" alt="Project image of Bon API-etit app."/>
+                  <img src="../assets/projects/3/2.png" alt="Project image of Bon API-etit app."/>
+                </div>
+                <div class="buttons grid two">
+                  <a href="https://interactivematt.github.io/bon-api-etit" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
+                  <a href="https://github.com/interactivematt/bon-api-etit" class="btn secondary" target="_blank">View Repo <i class="fab fa-github"></i></a>
+                </div>
+              </div>
+            </section>
+            
+          </article>
+          <article id="contact">
+            <!-- A Contact section that contains the following information:
+            ✅ email address
+            ✅ link to your github profile
+            ✅ link to your linkedin profile
+            -->
+            <h2>Contact</h2>
+            <section>
+            <h3>Get in touch with me</h3>
+              <div class="group">
+                <div class="item">
+                  <form action="https://formspree.io/f/xknpjboy" method="POST">
+                    <label for="email-address">Email <span>*</span></label>
+                    <input id="email-address" type="text" name="_replyto" placeholder="Your email address" required>
+                    <label for="message">Message <span>*</span></label>
+                    <textarea id="message" name="message" placeholder="Nice to meet you"></textarea>
+                    <div class="buttons">
+                      <button type="submit" class="btn primary">Send</button>
+                      <button type="reset" class="btn secondary">Clear</button>
+                    </div>
+                    
+                  </form>
+                </div>
+                <div class="item">
+                  <h4>Find me online</h4>
+                  <ol>
+                    <li><a href="https://www.linkedin.com/in/interactivematt/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://github.com/interactivematt" target="_blank">Github</a></li>
+                    <li><a href="mailto:hi@mattcastillo.com" target="_blank">hi@mattcastillo.com</a></li>
+                  </ol>
+              </div>
+              </div>
+            </section>
+          </article>
         </div>
-      </section>
+      </main>
+      <footer>
+        <div class="container">
+          <h4>© Matt Castillo</h4>
+        </div>
+      </footer>
     </div>
-  </main>
-  <footer>
-    <div class="container">
-      <a class="title" href="#">Matt Castillo</a>
-      <div class="right">
-        <a href="#">Home</a>
-        <a href="../about.html">About</a>
-        <a href="../work.html">Work</a>
-        <a href="../contact.html">Contact</a>
-      </div>
-      <p>© <script>document.write(new Date().getFullYear())</script></p>
-    </div>
-  </footer>
-
-  <script src="js/scripts.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
