--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="description" content="Engineering portfolio of Matt Castillo.">
     <meta name="author" content="Matt Castillo">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8c8bd573cc.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../js/jquery-1.10.1.min.js"><\/script>')</script>
-    <script src="../js/medium-zoom.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery-1.10.1.min.js"><\/script>')</script>
+    <script src="js/medium-zoom.min.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <header> <!-- Here's my header. -->
       <div class="container">
-        <img src="../assets/profile.jpg" alt="Photo of Matt">
-        <h1><a class="title" href="../index.html">Matt Castillo</a></h1>
+        <img src="assets/profile.jpg" alt="Photo of Matt">
+        <h1><a class="title" href="index.html">Matt Castillo</a></h1>
         <h3>Designer / Developer</h3>
         <nav>
           <a href="#intro">Intro</a>
@@ -87,7 +87,7 @@
             <section>
               <div class="project">
                 <figure class="description">
-                  <img class="icon" src="../assets/icons/fi-forecast.png" />
+                  <img class="icon" src="assets/icons/fi-forecast.png" />
                   <div>
                     <h4>FI Forecast</h4>
                     <h6>Feb-Mar 2021</h6>
@@ -104,9 +104,9 @@
                   <span class="label">CSS</span>
                 </div>
                 <div class="slideshow">
-                  <img id="zoom-default" src="../assets/projects/1/1.png" data-zoom-src="../assets/projects/1/1.png" alt="Project image of fi-forecast app."/>
-                  <img src="../assets/projects/1/2.png" alt="Project image of fi-forecast app."/>
-                  <img src="../assets/projects/1/3.png" alt="Project image of fi-forecast app."/>
+                  <img id="zoom-default" src="assets/projects/1/1.png" data-zoom-src="assets/projects/1/1.png" alt="Project image of fi-forecast app."/>
+                  <img src="assets/projects/1/2.png" alt="Project image of fi-forecast app."/>
+                  <img src="assets/projects/1/3.png" alt="Project image of fi-forecast app."/>
                 </div>
                 <div class="buttons two">
                   <a href="https://fi-forecast.vercel.app/" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
@@ -115,7 +115,7 @@
               </div>
               <div class="project">
                 <figure class="description">
-                  <img class="icon" src="../assets/icons/swatch-ui.png" />
+                  <img class="icon" src="assets/icons/swatch-ui.png" />
                   <div>
                     <h4>swatch-ui</h4>
                     <h6>Jan-Feb 2021</h6>
@@ -132,9 +132,9 @@
                   <span class="label">CSS</span>
                 </div>
                 <div class="slideshow">
-                  <img src="../assets/projects/2/1.png" alt="Project image of swatch-ui app."/>
-                  <img src="../assets/projects/2/2.png" alt="Project image of swatch-ui app."/>
-                  <img src="../assets/projects/2/3.png" alt="Project image of swatch-ui app."/>
+                  <img src="assets/projects/2/1.png" alt="Project image of swatch-ui app."/>
+                  <img src="assets/projects/2/2.png" alt="Project image of swatch-ui app."/>
+                  <img src="assets/projects/2/3.png" alt="Project image of swatch-ui app."/>
                 </div>
                 <div class="buttons grid two">
                   <a href="https://swatch-ui.vercel.app/" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
@@ -143,7 +143,7 @@
               </div>
               <div class="project">
                 <figure class="description">
-                  <img class="icon" src="../assets/icons/bon-api-etit.png" />
+                  <img class="icon" src="assets/icons/bon-api-etit.png" />
                   <div>
                     <h4>Bon API-etit</h4>
                     <h6>Dec 2020</h6>
@@ -157,8 +157,8 @@
                   <span class="label">CSS</span>
                 </div>
                 <div class="slideshow">
-                  <img src="../assets/projects/3/1.png" alt="Project image of Bon API-etit app."/>
-                  <img src="../assets/projects/3/2.png" alt="Project image of Bon API-etit app."/>
+                  <img src="assets/projects/3/1.png" alt="Project image of Bon API-etit app."/>
+                  <img src="assets/projects/3/2.png" alt="Project image of Bon API-etit app."/>
                 </div>
                 <div class="buttons grid two">
                   <a href="https://interactivematt.github.io/bon-api-etit" class="btn primary" target="_blank">View App <i class="fas fa-external-link-alt"></i></a>
