Fixed issues for submission
- Better responsiveness
- Added alt tags and lang

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -87,7 +87,7 @@
             <section>
               <div class="project">
                 <figure class="description">
-                  <img class="icon" src="assets/icons/fi-forecast.png" />
+                  <img class="icon" alt="App icon for project." src="assets/icons/fi-forecast.png" />
                   <div>
                     <h4>FI Forecast</h4>
                     <h6>Feb-Mar 2021</h6>
@@ -115,7 +115,7 @@
               </div>
               <div class="project">
                 <figure class="description">
-                  <img class="icon" src="assets/icons/swatch-ui.png" />
+                  <img class="icon" alt="App icon for project." src="assets/icons/swatch-ui.png" />
                   <div>
                     <h4>swatch-ui</h4>
                     <h6>Jan-Feb 2021</h6>
@@ -143,7 +143,7 @@
               </div>
               <div class="project">
                 <figure class="description">
-                  <img class="icon" src="assets/icons/bon-api-etit.png" />
+                  <img class="icon" alt="App icon for project." src="assets/icons/bon-api-etit.png" />
                   <div>
                     <h4>Bon API-etit</h4>
                     <h6>Dec 2020</h6>
@@ -195,7 +195,7 @@
                   <h4>Find me online</h4>
                   <ol>
                     <li><a href="https://www.linkedin.com/in/interactivematt/" target="_blank">LinkedIn</a></li>
-                    <li><a href="https://github.com/interactivematt" target="_blank">Github</a></li>
+                    <li><a href="https://github.com/interactivematt" target="_blank">GitHub</a></li>
                     <li><a href="mailto:hi@mattcastillo.com" target="_blank">hi@mattcastillo.com</a></li>
                   </ol>
               </div>
